--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.7",
+    "nodemailer": "^6.7.2",
+    "randomstring": "^1.2.1",
     "winston": "^3.2.1",
     "winston-mongodb": "^5.0.1"
   },
