--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,15 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=&SQenvi5*-
     volumes:
       - softrobot_volume:/data/db
       - softrobot_config_volume:/etc/
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=&SQenvi5*-
     ports:
       - "27017:27017"
     restart: unless-stopped
+    command: mongod
 
   softrobot_access:
     build:
