--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,8 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=&SQenvi5*-
     volumes:
       - softrobot_volume:/data/db
-      - softrobot_config_volume:/etc/
     ports:
-      - "27017:27017"
+      - "60435:27017"
     restart: unless-stopped
     command: mongod
 
@@ -26,17 +25,12 @@ services:
       - NOREPLY_EMAIL_ADDR=noreply@qenvi.com
       - EMAIL_PASS=noQEN-2022!!
       - MONGODB_ADDR=mongodb
-      - USERNAME_CONNEXION_DB=Yacine
-      - PASS_CONNEXION_DB=SQenvi5*
-      # - MONGODB_ADD=127.0.0.1
-      # - DB_NAME=softrobot
+      - USERNAME_CONNEXION_DB=root
+      - PASS_CONNEXION_DB=&SQenvi5*-
     ports:
       - "${PORT}:5000"
     links:
       - mongodb
 
 volumes:
-  softrobot_volume:
-  softrobot_config_volume:
-
-    
+  softrobot_volume: 
