--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,10 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=&SQenvi5*-
     volumes:
-      - softrobot_volume:/data/db
+      - db:/data/db
+      - config:/etc/
     ports:
-      - "60435:27017"
+      - "60435:60435"
     restart: unless-stopped
     command: mongod
 
@@ -33,4 +34,5 @@ services:
       - mongodb
 
 volumes:
-  softrobot_volume: 
+  db:
+  config:
