--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGODB_ADDR=127.0.0.1
+MONGODB_PASS=AdminPass
 JWT_PRIVATE_KEY=jwtPrivateKey
 NOREPLY_EMAIL_ADDR=noreply@qenvi.com
 EMAIL_PASS=noQEN-2022!!
